Update index.html copy changes for achievements

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
               One of my most game-changing contributions was the AI-powered Indeed Profile. Instead of being just a static resume, Profile became a dynamic, intelligent job-seeking tool—allowing 350M+ job seekers to showcase their skills, preferences, and experience in a way that made hiring faster and smarter. My work on Profile and Smart Sourcing helped Indeed shift from a traditional job board to a true AI-powered job marketplace.
             </div>
             <div class="card-paragraph">
-              I drove the first strategic integration between Indeed and Glassdoor, navigating complex stakeholder dynamics to align two sister companies with different priorities and cultures. This partnership not only strengthened both companies' market positions against competitors but also created a more unified experience for millions of users.
+              I drove the first strategic integration between Indeed and Glassdoor, navigating complex stakeholder dynamics to align two sister companies with different priorities and cultures. This partnership not only strengthened both companies' market positions against competitors but also created a more unified experience for millions of people.
             </div>
           </div>
         </div>
@@ -360,7 +360,7 @@
               At MakeMyTrip, I spearheaded the creation of a mobile-first experience when India's smartphone adoption was rapidly accelerating. Starting with extensive user research in emerging markets, we built a lightweight app optimized for limited data and older devices. This resulted in 4.6+ app store ratings, featured placements by Apple and Google, and 91% year-over-year growth in shoppers.
             </div>
             <div class="card-paragraph">
-              At Indeed, I conceived and built the Interview Scheduling platform from scratch, taking it from concept to facilitating 10M+ interviews annually in just 18 months. By focusing on core user needs, rapid validation cycles, and iterative improvement, I simplified the hiring process while significantly reducing time-to-hire metrics, creating a new revenue stream for the company.
+              At Indeed, I conceived and built the Interview Scheduling platform from scratch, taking it from concept to facilitating 10M+ interviews annually in just 18 months. By focusing on core customer needs, rapid validation cycles, and iterative improvement, I simplified the hiring process while significantly reducing time-to-hire metrics, creating a new revenue stream for the company.
             </div>
             <div class="card-paragraph">
               I bring this product creation experience to my advisory work, helping early-stage founders define MVP scope, establish product-market fit metrics, and build with capital efficiency—reducing time to market while focusing resources on features that directly accelerate customer acquisition and retention.
