--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
           <div class="card-content">
             <h3 class="card-title">AI Innovation & Partnerships</h3>
             <div class="card-paragraph">
-              I led Indeed's shift to AI-first user experiences, creating an intelligent content engine that collected 215M+ job seeker qualifications monthly to improve matching for millions. This transformed Indeed from a search-first job board to a recommendations-driven marketplace, significantly improving satisfaction for both sides of the platform.
+              I led Indeed's shift to AI-first user experiences, creating an intelligent content platform that collected 215M+ qualifications and preferences every month to improve matching for millions of job seekers. This transformed Indeed from a search-first job board to a recommendations-driven marketplace, significantly improving satisfaction for both sides of the platform.
             </div>
             <div class="card-paragraph">
               One of my most game-changing contributions was the AI-powered Indeed Profile. Instead of being just a static resume, Profile became a dynamic, intelligent job-seeking tool—allowing 350M+ job seekers to showcase their skills, preferences, and experience in a way that made hiring faster and smarter. My work on Profile and Smart Sourcing helped Indeed shift from a traditional job board to a true AI-powered job marketplace.
