--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           <h3>Start With Purpose</h3>
         </div>
         <div class="card-body">
-          <p>I believe exceptional products begin with a clear understanding of the human problem being solved. At Indeed, this meant questioning our "ease above all" approach when data showed it no longer served users. At MakeMyTrip, it guided our mobile-first strategy that simplified trip planning for millions of travelers. This principle ensures we build what truly matters to users.</p>
+          <p>I believe exceptional products begin with a clear understanding of the human problem being solved. At Indeed, this meant questioning our "ease above all" approach when data showed it no longer served our job seekers and employers. At MakeMyTrip, it guided our mobile-first strategy that simplified trip planning for millions of travelers. This principle ensures we build what truly matters to customers.</p>
         </div>
       </div>
       
