Update index.html - content updates

--- a/resume/index.html
+++ b/resume/index.html
@@ -65,7 +65,7 @@
     <footer>
         <div class="container">
             <div class="footer-content">
-                <p class="copyright">&copy; <script>document.write(new Date().getFullYear());</script> Aditya Pandya</p>
+                <p class="copyright">&copy; <script>document.write(new Date().getFullYear());</script> Aditya Pandya • Transforming Products, Empowering Teams</p>
             </div>
         </div>
     </footer>
