Update index.html - fixed extra period in about me.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           Leadership, for me, is about creating environments where teams feel empowered to consistently outperform expectations. I invest in building clear frameworks that foster autonomy and creativity, allowing teams, large or small, to deliver impactful results.
         </p><br>
         <p>
-          Today, I advise forward-thinking companies to navigate strategic growth challenges, refine impactful product strategies, and build effective, empowered teams that drive results at scale..</p>
+          Today, I advise forward-thinking companies to navigate strategic growth challenges, refine impactful product strategies, and build effective, empowered teams that drive results at scale.</p>
         <div class="highlight-box">
           <p>
             Beyond work, I'm passionate about community-building. I founded totalBarça, a globally renowned community for FC Barcelona fans, with over 780,000 followers. What makes me proudest isn't the scale, but the impact, channeling all revenue to UNICEF in alignment with the club's philanthropic mission. This experience reinforced my belief that technology can bring people together across boundaries in meaningful ways and create positive societal impact.
