--- a/index.html
+++ b/index.html
@@ -190,13 +190,13 @@
           <div class="card-content">
             <h3 class="card-title">Reinventing Marketplace Dynamics</h3>
             <div class="card-paragraph">
-              At Indeed, I led a fundamental shift that transformed the company's flagship job application platform from a volume-focused to a quality-centered marketplace, challenging a decade and a half of company orthodoxy around "ease above all else".
+              At Indeed, I led a fundamental shift that transformed the company's flagship job application platform from a quantity-focused to a quality-centered marketplace, challenging a decade and a half of company orthodoxy around "ease above all else."
             </div>
             <div class="card-paragraph">
-              This vision required aligning over a dozen teams across six countries and reimagining the job seeking and hiring journey for tens of millions job seekers and employers. The result was "Smart Apply," a tailored, guidance-driven job application process that drove a significant increase in hiring outcomes.
+              This vision required aligning over a dozen teams across six countries and reimagining the job seeking and hiring journey for tens of millions of job seekers and employers. The result was "Smart Apply," a tailored, guidance-driven job application process that drove a significant increase in hiring outcomes.
             </div>
             <div class="card-paragraph">
-              The impact was exceptional: Over a million more people hired annually, a ten-figure increase in revenue, and a complete shift in Indeed's product philosophy. By extending this platform to power job applications across Glassdoor, SimplyHired and partner sites, I established market leadership that created a sustainable competitive advantage in HR Tech.
+              The impact was exceptional: Over a million more people found meaningful work annually, substantial business growth, and a complete shift in Indeed's product philosophy. By extending this platform to power job applications across Glassdoor, SimplyHired and partner sites, I established market leadership that created a sustainable competitive advantage in HR Tech.
             </div>
           </div>
         </div>
@@ -205,13 +205,13 @@
           <div class="card-content">
             <h3 class="card-title">Transforming Team Performance</h3>
             <div class="card-paragraph">
-              My leadership approach consistently transforms team performance at every scale. I evolved Indeed Apply from a 5-person startup-like team into a fledging 150+ person organization across six countries, implementing a "follow the sun" model that enabled continuous innovation and drove 13x product growth.
+              My leadership approach consistently transforms team performance at every scale. I evolved Indeed Apply from a 5-person startup-like team into a thriving 150+ person organization across six countries, implementing a "follow the sun" model that enabled continuous innovation and drove 13x product growth.
             </div>
             <div class="card-paragraph">
               When I inherited Indeed's Profile team, the foundation of the company's billion-dollar sourcing business, it was on the verge of a collapse. I executed a comprehensive turnaround by restructuring into focused pods, rebuilding leadership capabilities, and establishing frameworks that fostered both accountability and innovation.
             </div>
             <div class="card-paragraph">
-              Within 18 months, this once-struggling team drove a nine-figure growth in revenue and became central to Indeed's marketplace strategy. The true testament to my leadership approach is how well my teams performed after my departure, maintaining momentum and continuing to innovate independently.
+              Within 18 months, this once-struggling team became central to Indeed's marketplace strategy and a key driver of business growth. The true testament to my leadership approach is how well my teams performed after my departure, maintaining momentum and continuing to innovate independently.
             </div>
           </div>
         </div>
@@ -220,13 +220,13 @@
           <div class="card-content">
             <h3 class="card-title">AI Innovation & Partnerships</h3>
             <div class="card-paragraph">
-              I drove Indeed's shift to AI-first user experiences, creating an intelligent content platform that collected hundreds of millions of qualifications and preferences every month to improve matching for tens of millions of job seekers. This transformed Indeed from a search-first job board to a recommendations-driven marketplace, significantly improving satisfaction for both sides of the platform.
+              I drove Indeed's shift to AI-first user experiences, creating an intelligent content platform that collected hundreds of millions of qualifications and preferences every month to improve matching for tens of millions of job seekers. This transformed Indeed from a search-first job board to a recommendations-driven job marketplace, significantly improving satisfaction for both sides of the platform.
             </div>
             <div class="card-paragraph">
-              One of my most game-changing contributions was the AI-powered Indeed Profile. Instead of being just a static resume, Profile became a dynamic, intelligent job-seeking tool, allowing 350M+ job seekers to showcase their skills, preferences, and experience in a way that made hiring faster and smarter. My work on Profile and Sourcing helped Indeed transition from a traditional job board to a true AI-powered job marketplace.
+              One of my most game-changing contributions was building the foundation for the AI-powered Indeed Profile. Instead of being just a static resume, Profile became a dynamic, intelligent job-seeking tool, allowing 350M+ job seekers to showcase their skills, preferences, and experience in a way that made hiring faster and smarter. My work on Profile helped Indeed transition to a true AI-powered job marketplace.
             </div>
             <div class="card-paragraph">
-              I drove the first strategic integration between Indeed and Glassdoor, navigating complex stakeholder dynamics to align two sister companies with different priorities and cultures. This partnership not only strengthened both companies' market positions against competitors but also created a more unified experience for tens of millions of people.
+              I also drove the first strategic integration between Indeed and Glassdoor, navigating complex stakeholder dynamics to align two sister companies with completely different priorities and cultures. This partnership not only strengthened both companies' market positions against competitors but also created a more unified experience for tens of millions of people.
             </div>
           </div>
         </div>
