--- a/strategic-partnership.html
+++ b/strategic-partnership.html
@@ -714,7 +714,7 @@
   <script src="assets/js/main.js"></script>
   <script>
     // Password protection
-    const correctPassword = 'appartnership'; // Change this to your desired password
+    const correctPassword = 'partnership'; // Change this to your desired password
     const passwordForm = document.getElementById('passwordForm');
     const passwordInput = document.getElementById('passwordInput');
     const passwordOverlay = document.getElementById('passwordOverlay');
