--- a/strategic-partnership.html
+++ b/strategic-partnership.html
@@ -369,6 +369,10 @@
         font-size: 1.1rem;
       }
 
+      .partnership-header {
+        padding: 140px 0 60px; /* Reduced padding on mobile */
+      }
+
       .model-cards {
         grid-template-columns: 1fr;
       }
@@ -379,6 +383,25 @@
 
       .cta-section h2 {
         font-size: 2rem;
+      }
+
+      .value-grid {
+        grid-template-columns: 1fr;
+        gap: 20px;
+      }
+
+      .section-heading {
+        font-size: 1.8rem;
+        text-align: center;
+        word-break: break-word;
+      }
+
+      .section {
+        padding: 60px 0;
+      }
+
+      .models-section, .value-creation {
+        padding: 60px 0;
       }
     }
   </style>
